--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "cors": "^2.8.1",
     "express": "^4.15.0",
     "express-jwt": "^5.1.0",
+    "install": "^0.8.7",
     "jsonwebtoken": "^7.3.0",
+    "markdown": "^0.5.0",
     "mongoose": "^4.8.5",
     "morgan": "^1.8.1",
-    "nconf": "^0.8.4"
+    "nconf": "^0.8.4",
+    "npm": "^4.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
