--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-app",
+  "name": "app",
   "version": "1.0.0",
   "description": "blog",
   "author": "lgybetter <437675103@qq.com>",
