--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "lgy blog new version",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -26,5 +27,10 @@
     "nconf": "^0.8.4",
     "npm": "^4.3.0",
     "vue-resource": "^1.2.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-polyfill": "^6.23.0",
+    "eslint": "^3.19.0"
   }
 }
