--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.8.1",
     "nconf": "^0.8.4",
     "npm": "^4.3.0",
+    "vue-markdown": "^2.1.3",
     "vue-resource": "^1.2.1"
   },
   "devDependencies": {
